opam-version: "2.0"
maintainer:   "fabrice@tarides.com"
homepage:     "https://github.com/fabbing/mirage-unikraft"
bug-reports:  "https://github.com/fabbing/mirage-unikraft/issues/"
dev-repo:     "git+https://github.com/fabbing/mirage-unikraft.git"
license:      "ISC"
authors: [
  "Anil Madhavapeddy <anil@recoil.org>"
  "Dan Williams <djwillia@us.ibm.com>"
  "Martin Lucina <martin@lucina.net>"
  "Fabrice Buoro <fabrice@tarides.com>"
]
tags: [
  "org:mirage"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs ]
]
depends: [
  "dune" {>= "2.7.0"}
  "bheap" {>= "2.0.0"}
  "ocaml" {>= "5.2.0"}
  "cstruct" {>= "1.0.1"}
  "lwt" {>= "2.4.3"}
  "metrics"
  "metrics-lwt" {>= "0.2.0"}
  "mirage-runtime" {>= "4.0"}
  "duration"
]
conflicts: [
  "io-page" {< "2.4.0"}
  "tcpip" {< "6.1.0"}
]
synopsis: "Unikraft core platform libraries for MirageOS"
description: """
This package provides the MirageOS `OS` library for
[Unikraft](https://github.com/unikraft) targets, which handles the main loop
and timers. It also provides the low level C startup code and C stubs required
by the OCaml code.

Currently this package also includes the C stubs used by the Unikraft `console`,
`block` and `net` implementations.

The OCaml runtime and C runtime required to support it are provided separately
by the [ocaml-unikraft](https://github.com/FIXME) package.
"""
