(library
 (name unikraft_os)
 (public_name mirage-unikraft)
 (private_modules main)
 (libraries mirage-runtime lwt lwt.unix duration)
 (no_dynlink)
 (foreign_archives mirage-unikraft_bindings))

(rule
 (target libmirage-unikraft_bindings.a)
 (deps
  (:dep libmirage-unikraft_bindings.%{context_name}.a))
 (action
  (copy %{dep} %{target})))

(rule
 (enabled_if
  (= %{context_name} unikraft))
 (target libmirage-unikraft_bindings.unikraft.a)
 (action
  (copy bindings/libmirage-unikraft_bindings.a %{target})))

(rule
 (target libmirage-unikraft_bindings.default.a)
 (action
  (copy stub/libmirage-unikraft_bindings.a %{target})))

(include_subdirs unqualified)
